# BasicAPI

./: Dockerfile  LICENSE  README.md
BasicAPI/: main.py  pyproject.toml
